--- a/halaman2.html
+++ b/halaman2.html
@@ -53,6 +53,7 @@
 <audio controls="controls" id="salah" src="tetot.mp3" type="audio/mp3" onloadeddata="Alert()"></audio>
 <audio controls="controls" id="spin" src="spin_2.mp3" type="audio/mp3" onloadeddata="Spin()"></audio>  
 <audio controls="controls" id="warning" src="warning.mp3" type="audio/mp3" onloadeddata="Warning()"></audio>
+  <audio controls="controls" id="cina" src="cina.mp3" type="audio/mp3" onloadeddata="Cina()" autoplay=""></audio>
   <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
