--- a/halaman2.html
+++ b/halaman2.html
@@ -2,6 +2,15 @@
 <html lang="id">
 
 <head>
+    <style>
+
+    body {
+
+      background-image: url('hewan.png');
+
+    }
+
+    </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hewan</title>
