--- a/halaman4.html
+++ b/halaman4.html
@@ -2,6 +2,15 @@
 <html lang="id">
 
 <head>
+    <style>
+
+    body {
+
+      background-image: url('makanan.png');
+
+    }
+
+    </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Makanan & Minuman</title>
@@ -15,7 +24,7 @@
 <body>
   <nav class="navbar">
     <!-- <div class="logo">MyLogo</div> -->
-        <div class="logo">Tugas Spin</div>
+        
     <button class="toggle-button" onclick="toggleMenu()">☰</button>
     <ul class="nav-links" id="nav-links">
         <li><a onclick="navigateTo('halaman1.html')">Alat Tulis</a></li>
