--- a/halaman1.html
+++ b/halaman1.html
@@ -6,7 +6,7 @@
 
     body {
 
-      background-image: url('makanan.png');
+      background-image: url('alattulis.png');
 
     }
 
@@ -31,7 +31,7 @@
 <body>
   <nav class="navbar">
     <!-- <div class="logo">MyLogo</div> -->
-    <div class="logo">Tugas Spin</div>
+    
     <button class="toggle-button" onclick="toggleMenu()">☰</button>
     <ul class="nav-links" id="nav-links">
         <li><a onclick="navigateTo('halaman1.html')">Alat Tulis</a></li>
