--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
             <h3>Makanan & Minuman</h3>
         </div>
     </div>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+ <script>
+
+ Swal.fire("Selamat Datang");
+
+ </script>
     <script src="index.js"></script>
 </body>
 </html>
