--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
 
  </script>
     <script src="index.js"></script>
+      <audio controls="controls" id="cina" src="cina.mp3" type="audio/mp3" onloadeddata="Cina()" autoplay="" loop></audio>
 </body>
 </html>
