Update and rename index2.html to index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h3>Makanan & Minuman</h3>
         </div>
     </div>
-      <audio controls="controls" id="cina" src="cina.mp3" type="audio/mp3" onloadeddata="Cina()" autoplay="" loop></audio>
+      <audio controls="controls" id="cina" src="cina.mp3" type="audio/mp3" onloadeddata="Cina()" autoplay="true"></audio>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
