--- a/index.html
+++ b/index.html
@@ -40,9 +40,17 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
  <script>
+ Swal.fire({
 
- Swal.fire("Selamat Datang");
+  title: "Selamat Datang",
 
+  confirmButtonText:"ok",
+
+}).then(()=>{
+
+  cina.play();
+
+});
  </script>
     <script src="index.js"></script>
 </body>
