--- a/halaman1.html
+++ b/halaman1.html
@@ -55,7 +55,7 @@
         </select>
         <select id="selectnumber">
           <option value="1">一</option>
-          <option value="2">二</option>
+          <option value="2">两</option>
           <option value="3">三</option>
           <option value="4">四</option>
           <option value="5">五</option>
